dark mode heading fixed

--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@
   /* Dark Mode */
   .dark-mode {
     background-color: #121212;
-    color: #ffffff;
+    color: #ff0000 ;
   }
   
   .dark-mode header {
